# Multi-Agent-System

./: .github_actions.yml  Dockerfile.sandbox  README.md  pyproject.toml
src/agent/: agent_codeact.py  agent_web.py
src/app/: api.py  graph.py
src/mcp_server/: server_web.py
src/memory/: __init__.py  memory_extractor.py  memory_manager.py
src/openwebui/: pipeline.py
src/presidio/: eval_PII_model.py  recognizer.py
src/sandbox/: __init__.py  docker_executor.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_codeact.py  test_graph.py  test_memory.py  test_recognizer.py  test_sandbox_security.py
